@@ -35,22 +35,34 @@ public interface ItemMapper {
         return images.stream().map(ImageEntity::getId).collect(Collectors.toSet());
     }
 
+    @Named("mapReceiptsToIds")
+    static Set<Integer> mapReceiptsToIds(Set<ImageEntity> images) {
+        if (images == null) return Set.of();
+        return images.stream().map(ImageEntity::getId).collect(Collectors.toSet());
+    }
+
     @Named("mapTagsToUuids")
     static List<UUID> mapTagsToUuids(Set<TagEntity> tags) {
         if (tags == null) return List.of();
-        return tags.stream().map(TagEntity::getUuid).collect(Collectors.toList());
+        return tags.stream().map(TagEntity::getUuid).toList();
     }
 
     @Named("mapRelatedEntitiesToUuids")
     static List<UUID> mapRelatedEntitiesToUuids(Set<ItemEntity> items) {
         if (items == null) return List.of();
-        return items.stream().map(ItemEntity::getUuid).collect(Collectors.toList());
+        return items.stream().map(ItemEntity::getUuid).toList();
     }
 
     @Named("mapImagesToUuids")
     static List<UUID> mapImagesToUuids(Set<ImageEntity> images) {
         if (images == null) return List.of();
-        return images.stream().map(ImageEntity::getUuid).collect(Collectors.toList());
+        return images.stream().map(ImageEntity::getUuid).toList();
+    }
+
+    @Named("mapReceiptsToUuids")
+    static List<UUID> mapReceiptsToUuids(Set<ImageEntity> images) {
+        if (images == null) return List.of();
+        return images.stream().map(ImageEntity::getUuid).toList();
     }
 
     @Mapping(source = "category.id", target = "categoryId")
@@ -58,6 +70,7 @@ public interface ItemMapper {
     @Mapping(target = "tagIds", source = "tags", qualifiedByName = "mapTagsToIds")
     @Mapping(target = "relatedItemIds", source = "relatedItems", qualifiedByName = "mapRelatedEntitiesToIds")
     @Mapping(target = "imageIds", source = "images", qualifiedByName = "mapImagesToIds")
+    @Mapping(target = "receiptIds", source = "receipts", qualifiedByName = "mapReceiptsToIds")
     Item toDto(ItemEntity entity);
 
     @Mapping(target = "category", ignore = true)
@@ -66,6 +79,7 @@ public interface ItemMapper {
     // Related items are processed in the service layer
     @Mapping(target = "relatedItems", ignore = true)
     @Mapping(target = "images", ignore = true)
+    @Mapping(target = "receipts", ignore = true)
     ItemEntity toEntity(Item dto);
 
     @Mapping(target = "category", source = "category.uuid")
@@ -73,5 +87,6 @@ public interface ItemMapper {
     @Mapping(target = "tags", qualifiedByName = "mapTagsToUuids")
     @Mapping(target = "relatedItems", qualifiedByName = "mapRelatedEntitiesToUuids")
     @Mapping(target = "images", qualifiedByName = "mapImagesToUuids")
+    @Mapping(target = "receipts", qualifiedByName = "mapReceiptsToUuids")
     ExportItem toExportItem(ItemEntity entity);
 }
